--- a/platforms/ios/Carlini CPA/Carlini CPA-Info.plist
+++ b/platforms/ios/Carlini CPA/Carlini CPA-Info.plist
@@ -49,18 +49,18 @@
       </dict>
     </dict>
     <key>CFBundleIdentifier</key>
-    <string>com.phonegap.helloworld</string>
+    <string>com.rotarydesign.carlinicpa</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
     <string>${PRODUCT_NAME}</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0.1</string>
     <key>CFBundleSignature</key>
     <string>????</string>
     <key>CFBundleVersion</key>
-    <string>1.0.1</string>
-    <key>CFBundleShortVersionString</key>
     <string>1.0.1</string>
     <key>LSRequiresIPhoneOS</key>
     <true/>
